--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
           <h3>Links</h3>
           <div class="links">
             <a class="link" href="https://github.com/PLUUT00" target="_blank" rel="noreferrer">GitHub</a>
-            <a class="link" href="#" onclick="return false;">Email (add me)</a>
-            <a class="link" href="#" onclick="return false;">LinkedIn (add me)</a>
+            <a class="link" href="#" onclick="return false;">Email</a>
+            <a class="link" href="#" onclick="return false;">LinkedIn</a>
           </div>
           <p class="muted">Edit these in <code>index.html</code>.</p>
         </div>
