--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </h1>
 
         <p class="subtitle">
-          I know <strong>Golang</strong> really well, I’m strong in <strong>Python</strong>,
-          and I’m currently learning <strong>JavaScript</strong> to ship modern web experiences.
+          I know <strong>Golang</strong> really well, I’m good in <strong>Python</strong>,
+          and I’m currently learning <strong>JavaScript</strong>.
         </p>
 
         <div class="cta">
@@ -97,8 +97,7 @@
             backend services, automation, and developer tooling.
           </p>
           <p>
-            My default is: clear interfaces, predictable behavior, strong observability,
-            and performance that’s earned—not guessed.
+            I design minimal interfaces without unneded complexity
           </p>
         </div>
 
