--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div class="card">
           <h3>One-liner</h3>
           <p class="mono" id="oneLiner">
-            PLUTO — Go-first developer. Python strong. JavaScript in progress.
+            <strong>67</strong>
           </p>
           <button class="btn" id="copyBtn" type="button">Copy</button>
         </div>
