--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="card">
           <h3>One-liner</h3>
           <p class="mono" id="oneLiner">
-            <strong>67</strong>
+            <strong>I develop fast systems and clean tooling using Go and Python.</strong>
           </p>
           <button class="btn" id="copyBtn" type="button">Copy</button>
         </div>
