Added more understandable button text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="#skills">Skills</a>
       <a href="#now">Now</a>
       <a href="#contact">Contact</a>
-      <button class="btn ghost" id="themeBtn" type="button" aria-label="Toggle theme">Theme</button>
+      <button class="btn ghost" id="themeBtn" type="button" aria-label="Toggle Dark/Light mode">Theme</button>
     </nav>
   </header>
 
